<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutRecipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/common_spacing">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:paddingBottom="@dimen/small_space"
        android:gravity="center_horizontal"
        tools:text="Something very tasty"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/options"
        app:layout_constraintBottom_toTopOf="@id/authorInscription"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_dark"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.AppTheme.OptionsButton"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorInscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/small_space"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/categoryInscription"
        android:text="@string/author"
        android:textSize="@dimen/common_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/authorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_space"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="@id/authorInscription"
        app:layout_constraintStart_toEndOf="@id/authorInscription"
        tools:text="Me me me"
        android:textSize="@dimen/common_text_size"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/categoryInscription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/authorInscription"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/category"
        android:textSize="@dimen/common_text_size" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_space"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@id/categoryInscription"
        app:layout_constraintStart_toEndOf="@id/categoryInscription"
        tools:text="Europe"
        android:textSize="@dimen/common_text_size"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/description_recipe_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/categoryInscription"
        style="@style/Widget.AppTheme.LikeCheckBox" />

</androidx.constraintlayout.widget.ConstraintLayout>